<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">
    <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_fb"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:background="@drawable/fbbutton_background"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.038"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.962"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline7"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline8"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.67"
            app:srcCompat="@drawable/logo"
            android:id="@+id/iv_logo"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grpup_chose_lang"
            android:visibility="gone"/>
    <TextView
            android:text="@string/to_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_need_account"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="#424242"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:gravity="center"
            app:fontFamily="@font/montserrat"
            android:textSize="14sp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:textColor="#424242"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/view"
            android:background="#989898"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/textView8" app:layout_constraintBottom_toBottomOf="@+id/textView8"/>

    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/view4"
            android:background="#989898"
            app:layout_constraintTop_toTopOf="@+id/textView8" app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/sign_up_by"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:fontFamily="@font/montserrat"
            android:id="@+id/btn_signup" app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_need_account" android:textAllCaps="false" android:textSize="16sp"
            android:background="@drawable/button_background" android:textColor="#FFFFFF"/>
    <TextView
            android:text="@string/by_registering"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_aggriement"
            app:layout_constraintTop_toBottomOf="@+id/btn_fb"
            app:fontFamily="@font/montserrat"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            android:layout_marginTop="24dp" android:textColor="#5A5858"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_aggriement"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintVertical_bias="0.0">
        <TextView
                android:text="@string/already_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:fontFamily="@font/montserrat" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:textColor="#383535"/>
        <TextView
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_signin" android:textSize="18sp"
                app:fontFamily="@font/montserrat"
                android:layout_marginTop="8dp"
                android:textColor="#0062FF" android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>